{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 158,
  "lineage": "7b2eaaf7-2605-5cd3-5d4e-b75078219aab",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100949062396:security-group/sg-01530a854addae6ef",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01530a854addae6ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8e318292ec6a2d1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster20200303064654402600000001",
            "name_prefix": "eks-cluster",
            "owner_id": "100949062396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-eks_cluster_sg",
              "environment": "dev-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-ba13ddd1"
          }
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100949062396:security-group/sg-0c8e318292ec6a2d1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8e318292ec6a2d1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01530a854addae6ef"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01530a854addae6ef"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-cluster20200303065838933500000006",
            "name_prefix": "eks-cluster",
            "owner_id": "100949062396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-eks_worker_sg",
              "environment": "dev-env",
              "kubernetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-ba13ddd1"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2814933308",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01530a854addae6ef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-309352707",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01530a854addae6ef",
            "self": false,
            "source_security_group_id": "sg-0c8e318292ec6a2d1",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1904425312",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c8e318292ec6a2d1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2423361342",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8e318292ec6a2d1",
            "self": false,
            "source_security_group_id": "sg-01530a854addae6ef",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3112238032",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8e318292ec6a2d1",
            "self": false,
            "source_security_group_id": "sg-01530a854addae6ef",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3926965986",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c8e318292ec6a2d1",
            "self": false,
            "source_security_group_id": "sg-0c8e318292ec6a2d1",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_cloudwatch_log_group.this",
            "module.eks-cluster.aws_eks_cluster.this",
            "module.eks-cluster.aws_iam_role.cluster",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}